--- a/cv_en/publications.bib
+++ b/cv_en/publications.bib
@@ -1,8 +1,14 @@
-@article{bevilacqua2023flexible,
-  title={A flexible Clayton-like spatial copula with application to bounded support data},
-  author={Bevilacqua, Moreno and Alvarado, Eloy and Caama{\~n}o-Carrillo, Christian},
-  journal={arXiv preprint arXiv:2305.18166},
-  year={2023}
+@article{BEVILACQUA2023105277,
+title = {A flexible Clayton-like spatial copula with application to bounded support data},
+journal = {Journal of Multivariate Analysis},
+pages = {105277},
+year = {2023},
+issn = {0047-259X},
+doi = {https://doi.org/10.1016/j.jmva.2023.105277},
+url = {https://www.sciencedirect.com/science/article/pii/S0047259X23001239},
+author = {Moreno Bevilacqua and Eloy Alvarado and Christian Caamaño-Carrillo},
+keywords = {Archimedean Copula, Beta random fields, Composite likelihood, Reflection Asymmetry},
+abstract = {The Gaussian copula is a powerful tool that has been widely used to model spatial and/or temporal correlated data with arbitrary marginal distributions. However, this kind of model can potentially be too restrictive since it expresses a reflection symmetric dependence. In this paper, we propose a new spatial copula model that makes it possible to obtain random fields with arbitrary marginal distributions with a type of dependence that can be reflection symmetric or not. Particularly, we propose a new random field with uniform marginal distributions that can be viewed as a spatial generalization of the classical Clayton copula model. It is obtained through a power transformation of a specific instance of a beta random field which in turn is obtained using a transformation of two independent Gamma random fields. For the proposed random field, we study the second-order properties and we provide analytic expressions for the bivariate distribution and its correlation. Finally, in the reflection symmetric case, we study the associated geometrical properties. As an application of the proposed model we focus on spatial modeling of data with bounded support. Specifically, we focus on spatial regression models with marginal distribution of the beta type. In a simulation study, we investigate the use of the weighted pairwise composite likelihood method for the estimation of this model. Finally, the effectiveness of our methodology is illustrated by analyzing point-referenced vegetation index data using the Gaussian copula as benchmark. Our developments have been implemented in an open-source package for the R statistical environment.}
 }
 
 @Article{Beltran2023,
