--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -173,6 +173,9 @@ of the COVID-19 pandemic in the Chilean population, ANID, Reference No. COVID076
 
 \section{Advising}
 \cvitem{2022}{Cristóbal Collao. Statistical Engineering. \href{https://www.uv.cl/}{Universidad de Valparaíso}. Co-advisor.}
+\cvitem{2023}{Ricardo Menares. Statistics and Data Science Engineering. \href{https://www.uv.cl/}{Universidad de Valparaíso}. Co-advisor.}
+
+
 \section{Scientific Events}
 \cvitem{2023}{\textit{``Retroalimentación basada en IA para estudiantes de Ingeniería''}. XXXV Chilean Congress of Engineering Education. Organizer: \href{https://www.sochedi.cl}{Chilean Society of Engineering Education}}
 \cvitem{2022}{\textit{``A flexible clayton-like spatial copula with application to bounded support data''}. III Statistics Workshop: Graduate Contributions and Scientific initiation. Organizer: \href{https://www.soche.cl}{Chilean Statistical Society}}
