--- a/cv_en/publications.bib
+++ b/cv_en/publications.bib
@@ -1,3 +1,22 @@
+@article{torres-rivera_methane_2024,
+	title = {Methane {Dynamics} in the {Wupper}-{Vorsperre} {Reservoir}: {Insights} from {Sediment} {Characterization} and {VFA} {Monitoring}},
+	doi = {Under Review},
+	abstract = {Purpose: Methane (CH4) contributes significantly to global warming, with man-made
+reservoirs accounting for approximately 6\% of its emissions. Volatile fatty acids (VFAs) can stimulate CH4 production by functioning as methanogenesis substrates. Consequently, monitoring VFA has gained importance in anaerobic digestion (AD) due to its influence on CH4 yield. However, typical monitoring techniques, such as titration,
+are rarely used for reservoir sediment monitoring.
+Methods: This study characterizes sediment in Germany's Wupper-Vorsperre reservoir and compares Nordmann's titration and the more precise High-Performance Liquid Chromatography (HPLC) for measuring VFAs. Sediment samples were collected and
+biogas was extracted during 2020-2022.
+Results: Sediment analysis reveals consistently low total organic carbon (TOC), organic matter (OM) and total nitrogen (TN) values with minimal seasonal variation. The carbon-to-nitrogen (C:N) ratio falls within the lower limit ideal for biogas production, with higher CH4 content during warmer seasons. Although titration underestimates sediment's VFA values regarding HPLC, by a mean difference of 15.7 mg/L, there is a significant correlation between the two methods (r = 0.96, p {\textless} 0.001)
+with an Intraclass correlation coefficient (ICC) of 0.84. Moreover, a weak correlation (r=0.31) was found between VFA and CH4 content.
+Conclusion: The area studied is not a CH4 ebullition hotspot emphasizing the role of OM burial in driving methane emissions and highlighting the significance of VFA as a predictor of methane content in sediments. Future research may aim to improve titration accuracy to develop an early in-situ indicator of CH4 content and study VFA's
+influence on CH4 formation in reservoir sediments.},
+	language = {EN},
+	journal = {Journal of Soils and Sediments (Under review)},
+	author = {Felipe Torres-Rivera  and Patrick Beuel and Eloy Alvarado  and Christian Jokiel},
+	year = {2024},
+}
+
+
 @article{BEVILACQUA2023105277,
 title = {A flexible Clayton-like spatial copula with application to bounded support data},
 journal = {Journal of Multivariate Analysis},
