--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -1,11 +1,3 @@
-%% start of file `template.tex'.
-%% Copyright 2006-2015 Xavier Danaux (xdanaux@gmail.com).
-%
-% This work may be distributed and/or modified under the
-% conditions of the LaTeX Project Public License version 1.3c,
-% available at http://www.latex-project.org/lppl/.
-
-
 \documentclass[11pt,a4paper,roman]{moderncv}        % possible options include font size ('10pt', '11pt' and '12pt'), paper size ('a4paper', 'letterpaper', 'a5paper', 'legalpaper', 'executivepaper' and 'landscape') and font family ('sans' and 'roman')
 
 % moderncv themes
@@ -177,6 +169,10 @@ of the COVID-19 pandemic in the Chilean population, ANID, Reference No. COVID076
 
 
 \section{Scientific Events}
+
+\cvitem{2023}{\textit{``Herramientas y estrategias para una investigación reproducible''}. 3rd Webinar Open Science USM. Organizer: \href{https://www.usm.cl/}{Universidad Técnica Federico Santa María}}
+
+
 \cvitem{2023}{\textit{``Retroalimentación basada en IA para estudiantes de Ingeniería''}. XXXV Chilean Congress of Engineering Education. Organizer: \href{https://www.sochedi.cl}{Chilean Society of Engineering Education}}
 \cvitem{2022}{\textit{``A flexible clayton-like spatial copula with application to bounded support data''}. III Statistics Workshop: Graduate Contributions and Scientific initiation. Organizer: \href{https://www.soche.cl}{Chilean Statistical Society}}
 \cvitem{2015}{\textit{``Stochastics differential equations in mathematical finance: The Black-Scholes Model''}. XXI Valparaíso Statistical Week. \href{https://www.pucv.cl}{Pontificia Universidad Católica de Valparaíso}}
