--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -170,7 +170,7 @@ of the COVID-19 pandemic in the Chilean population, ANID, Reference No. COVID076
 
 \section{Scientific Events}
 
-\cvitem{2023}{\textit{``Herramientas y estrategias para una investigación reproducible''}. 3rd Webinar Open Science USM. Organizer: \href{https://www.usm.cl/}{Universidad Técnica Federico Santa María}}
+\cvitem{2023}{\textit{``Herramientas y estrategias para una investigación reproducible''}. 3rd Open Science Webinar USM. Organizer: \href{https://www.usm.cl/}{Universidad Técnica Federico Santa María}}
 
 
 \cvitem{2023}{\textit{``Retroalimentación basada en IA para estudiantes de Ingeniería''}. XXXV Chilean Congress of Engineering Education. Organizer: \href{https://www.sochedi.cl}{Chilean Society of Engineering Education}}
