--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -81,7 +81,7 @@
 \thispagestyle{empty}
 
 {\bfseries \LARGE Eloy Alvarado Narváez}\\
-\href{http://industrias.usm.cl}{Departmento de Industrias, Universidad Técnica Federico Santa María}, Santiago, Chile.\\
+\href{http://industrias.usm.cl}{Departmento de Industrias\\ Universidad Técnica Federico Santa María} \\ Santiago, Chile.\\
 Office: B-207\\
 \href{mailto:eloy.alvarado@usm.cl}{\faIcon[regular]{envelope}}
 \href{https://github.com/ealvnrz}{\faIcon{github}}
@@ -104,7 +104,7 @@ Office: B-207\\
 \cvitem{}{Advisors: Moreno Bevilacqua and Christian Caamaño}
 
 \cvitemwithcomment{2013 -- 2015}{Bachelor in Statistics / Statistician, \href{http://www.pucv.cl}{Pontificia Universidad Católica de Valparaíso}}{Valparaíso, Chile.}
-\cvitem{2014}{Exchange program in \href{http://www.korea.ac.kr}{Korea University}}
+\cvitemwithcomment{2014}{Exchange program in \href{http://www.korea.ac.kr}{Korea University}}{Seoul, South Korea}
 
 \section{Languages}
 \cvitem{Spanish}{Native Speaker}
@@ -186,7 +186,7 @@ of the COVID-19 pandemic in the Chilean population, ANID, Reference No. COVID076
 \href{mailto:carlos.montenegro@ifop.cl}{\texttt{carlos.montenegro@ifop.cl}}}
 
 \vfill
-\textit{Updated: October 2023}
+\textit{Updated: February 2024}
 % Publications from a BibTeX file using the multibib package
 %\section{Publications}
 %\nocitebook{book1,book2}
