--- a/cv_en/publications.bib
+++ b/cv_en/publications.bib
@@ -1,3 +1,10 @@
+@Article{Alvarado_canadian,
+  author  = {Alvarado, Eloy and Plaza-Vega, Francisco and Montenegro, Carlos and Saavedra, Oscar},
+  journal = {Canadian Journal of Fisheries and Aquatic Sciences (Under Review)},
+  title   = {Deep learning-based classification of species in central-southern fisheries in Chile},
+  year    = {2024},
+}
+
 @article{torres-rivera_methane_2024,
 	title = {Methane {Dynamics} in the {Wupper}-{Vorsperre} {Reservoir}: {Insights} from {Sediment} {Characterization} and {VFA} {Monitoring}},
 	doi = {Under Review},
@@ -69,6 +76,7 @@ abstract = {The Gaussian copula is a powerful tool that has been widely used to 
   pages     = {1--8},
   publisher = {Universidad de Concepci{\'o}n},
 }
+
  
 @Article{SanzanaLuengo2022,
   author  = {Sanzana-Luengo, Cristina and D{\'\i}az, Leonardo and Abarza, Liliann and Alvarado, Eloy and Beltr{\'a}n, V{\'\i}ctor},
@@ -87,6 +95,7 @@ abstract = {The Gaussian copula is a powerful tool that has been widely used to 
   pages     = {1--35},
   publisher = {Taylor \& Francis},
 }
+
 
 @Comment{jabref-meta: databaseType:bibtex;}
 
