--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -82,7 +82,7 @@
 
 {\bfseries \LARGE Eloy Alvarado Narváez}\\
 \href{http://industrias.usm.cl}{Departmento de Industrias\\ Universidad Técnica Federico Santa María} \\ Santiago, Chile.\\
-Office: B-207\\
+Office: A-293\\
 \href{mailto:eloy.alvarado@usm.cl}{\faIcon[regular]{envelope}}
 \href{https://github.com/ealvnrz}{\faIcon{github}}
 \href{https://www.linkedin.com/in/ealvnrz/}{\faIcon{linkedin}}
