--- a/cv_en/publications.bib
+++ b/cv_en/publications.bib
@@ -1,3 +1,10 @@
+@Article{FAS2024,
+  author  = {Farías, María Elisa and Alvarado, Eloy and Scavia, Javier},
+  journal = {Journal of Macroeconomics (Submitted)},
+  title   = {My Beliefs or Yours? Contagion in Times of Financial Distress},
+  year    = {2024},
+}
+
 @Article{Alvarado_canadian,
   author  = {Alvarado, Eloy and Plaza-Vega, Francisco and Montenegro, Carlos and Saavedra, Oscar},
   journal = {Canadian Journal of Fisheries and Aquatic Sciences (Under Review)},
