--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -129,17 +129,26 @@ Office: A-293\\
 \section{Grants and Projects}
 
 \cvitem{2023 -- 2024}{Modeling and estimating massive point referenced spatial data, MATH-AMSUD AMSUD220041. Research Associate.}
-\cvitem{2018 -- 2022}{National Doctoral Degree, ANID. N° 2018-21180953}
+\cvitem{2018 -- 2022}{National Doctoral Degree, ANID. No. 2018-21180953}
 \cvitem{2020 -- 2020}{Semi-presential technological support platform for urgent and priority dental care for the elderly in the context
 of the COVID-19 pandemic in the Chilean population, ANID, Reference No. COVID0766, Chile. Collaborator}
 
 \section{Teaching}
 
+% USM
 \cvitem{}{\href{https://www.usm.cl/}{\textbf{\textsc{Universidad Técnica Federico Santa María}}}}
+\cvitem{2024/01}{PII 402: Stochastic Processes (Postgraduate)}
 \cvitem{2023/02}{PII 402: Stochastic Processes (Postgraduate)}
 \cvitem{2023/01}{ICN 292:  Management Information Systems}
 \cvitem{2023/01}{IND 163C: Business Analytics}
 \cvitem{2022/02}{IND 163C: Business Analytics}
+
+% UNAB
+\cvitem{}{\href{https://www.unab.cl/}{\textbf{\textsc{Universidad Andrés Bello}}}}
+\cvitem{2024/01}{CIND 217: Inteligencia de Negocios}
+\cvitem{2023/02}{IICG P01: Inteligencia de Negocios}
+
+%UV
 \cvitem{}{\href{https://www.uv.cl/}{\textbf{\textsc{Universidad de Valparaíso}}}}
 \cvitem{2022/02}{IEST 422: Statistical Quality Control}
 \cvitem{2022/02}{LFIS 325: Statistics for Physical Sciences}
@@ -186,7 +195,7 @@ of the COVID-19 pandemic in the Chilean population, ANID, Reference No. COVID076
 \href{mailto:carlos.montenegro@ifop.cl}{\texttt{carlos.montenegro@ifop.cl}}}
 
 \vfill
-\textit{Updated: February 2024}
+\textit{Updated: March 2024}
 % Publications from a BibTeX file using the multibib package
 %\section{Publications}
 %\nocitebook{book1,book2}
