--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -137,6 +137,7 @@ of the COVID-19 pandemic in the Chilean population, ANID, Reference No. COVID076
 
 % USM
 \cvitem{}{\href{https://www.usm.cl/}{\textbf{\textsc{Universidad Técnica Federico Santa María}}}}
+\cvitem{2024/01-02}{ICN 292:  Management Information Systems}
 \cvitem{2024/01}{PII 402: Stochastic Processes (Postgraduate)}
 \cvitem{2023/02}{PII 402: Stochastic Processes (Postgraduate)}
 \cvitem{2023/01}{ICN 292:  Management Information Systems}
@@ -173,6 +174,8 @@ of the COVID-19 pandemic in the Chilean population, ANID, Reference No. COVID076
 
 
 \section{Advising}
+\cvitem{2024}{Nicolás Bravo. Industrial Engineering. \href{https://www.industrias.usm.cl/}{Universidad Técnica Federico Santa María}. Advisor.}
+
 \cvitem{2023}{Ricardo Menares. Statistics and Data Science Engineering. \href{https://www.uv.cl/}{Universidad de Valparaíso}. Co-advisor.}
 
 \cvitem{2022}{Cristóbal Collao. Statistical Engineering. \href{https://www.uv.cl/}{Universidad de Valparaíso}. Co-advisor.}
