--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -122,9 +122,15 @@ Office: A-293\\
 \nocite{*}
 \bibliography{publications}                        % 'publications' is the name of a BibTeX file
 
-%\section{Under peer review articles}
+\section{Working papers}
 
-%\cvitem{1.}{Moreno Bevilacqua, Eloy Alvarado, Christian Caamaño. \textit{``A flexible clayton-like spatial copula with application to bounded support data''}. Journal of Multivariate Analysis.}
+\cvitem{1.}{\textit{Simulation-based road characterization using LiDAR intensity: a
+random field approach for mining haul roads}. Joint work with David Godoy and Tomás Chávez.} 
+
+\cvitem{2.}{\textit{Ali-Mikhail-Haq spatial copula}. Joint work with Moreno Bevilacqua and Christian Caamaño-Carrillo.}
+
+\cvitem{3.}{\textit{Weibull random fields through Clayton spatial copula: An application to mining haul roads}. Joint work with Christian Caamaño-Carrillo and Luis Riquelme.}
+\cvitem{4.}{\textit{A CAPM Approach with Stable Error Distributions: Application to Brazilian Market Dynamics}. Joint work with María Elisa Farías and Kerlyns Martínez.}
 
 \section{Grants and Projects}
 
@@ -183,12 +189,16 @@ of the COVID-19 pandemic in the Chilean population, ANID, Reference No. COVID076
 
 \section{Scientific Events}
 
-\cvitem{2023}{\textit{``Herramientas y estrategias para una investigación reproducible''}. 3rd Open Science Webinar USM. Organizer: \href{https://www.usm.cl/}{Universidad Técnica Federico Santa María}}
-
-
-\cvitem{2023}{\textit{``Retroalimentación basada en IA para estudiantes de Ingeniería''}. XXXV Chilean Congress of Engineering Education. Organizer: \href{https://www.sochedi.cl}{Chilean Society of Engineering Education}}
-\cvitem{2022}{\textit{``A flexible clayton-like spatial copula with application to bounded support data''}. III Statistics Workshop: Graduate Contributions and Scientific initiation. Organizer: \href{https://www.soche.cl}{Chilean Statistical Society}}
-\cvitem{2015}{\textit{``Stochastics differential equations in mathematical finance: The Black-Scholes Model''}. XXI Valparaíso Statistical Week. \href{https://www.pucv.cl}{Pontificia Universidad Católica de Valparaíso}}
+\cvitem{Nov 2024}{\textit{``Weibull random fields through Clayton spatial copula An application to mining haul roads''}. III Statistical Engineering Conference. Organizer: \href{https://www.usach.cl}{Universidad de Santiago de Chile}}
+\cvitem{Oct 2024}{\textit{``Archimedean-like spatial copulas''}. XLVII National Conference on Statistics. Organizer: \href{https://www.soche.cl}{Chilean Statistical Society}}
+\cvitem{Oct 2024}{\textit{``Análisis de la intención de uso de TIC en Ingeniería Civil Industrial: Integrando UTAUT y Modelos de Ecuaciones Estructurales''}. XXXVI Chilean Congress of Engineering Education. Organizer: \href{https://www.sochedi.cl}{Chilean Society of Engineering Education}}
+\cvitem{Aug 2024}{\textit{``Workshop: Investigación Reproducible con R''}. Open Science Webinar USM. Organizer: \href{https://www.usm.cl/}{Universidad Técnica Federico Santa María}}
+\cvitem{Jul 2024}{\textit{``Experiencias en Ciencia Abierta''}.  Ciencia Abierta USM. Organizer: \href{https://www.usm.cl/}{Universidad Técnica Federico Santa María}}
+\cvitem{Jul 2024}{\textit{``Archimedean-like spatial copulas and their applications''}. Colloquium on Statistics and Data Science. Organizer: \href{https://www.uc.cl/}{Pontificia Universidad Católica de Chile}}
+\cvitem{Nov 2023}{\textit{``Herramientas y estrategias para una investigación reproducible''}. 3rd Open Science Webinar USM. Organizer: \href{https://www.usm.cl/}{Universidad Técnica Federico Santa María}}
+\cvitem{Oct 2023}{\textit{``Retroalimentación basada en IA para estudiantes de Ingeniería''}. XXXV Chilean Congress of Engineering Education. Organizer: \href{https://www.sochedi.cl}{Chilean Society of Engineering Education}}
+\cvitem{Dec 2022}{\textit{``A flexible clayton-like spatial copula with application to bounded support data''}. III Statistics Workshop: Graduate Contributions and Scientific initiation. Organizer: \href{https://www.soche.cl}{Chilean Statistical Society}}
+\cvitem{Oct 2015}{\textit{``Stochastics differential equations in mathematical finance: The Black-Scholes Model''}. XXI Valparaíso Statistical Week. \href{https://www.pucv.cl}{Pontificia Universidad Católica de Valparaíso}}
 
 
 \section{References}
@@ -198,7 +208,7 @@ of the COVID-19 pandemic in the Chilean population, ANID, Reference No. COVID076
 \href{mailto:carlos.montenegro@ifop.cl}{\texttt{carlos.montenegro@ifop.cl}}}
 
 \vfill
-\textit{Updated: March 2024}
+\textit{Updated: November 2024}
 % Publications from a BibTeX file using the multibib package
 %\section{Publications}
 %\nocitebook{book1,book2}
