--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -193,7 +193,7 @@ of the COVID-19 pandemic in the Chilean population, ANID, Reference No. COVID076
 \cvitem{Oct 2024}{\textit{``Archimedean-like spatial copulas''}. XLVII National Conference on Statistics. Organizer: \href{https://www.soche.cl}{Chilean Statistical Society}}
 \cvitem{Oct 2024}{\textit{``Análisis de la intención de uso de TIC en Ingeniería Civil Industrial: Integrando UTAUT y Modelos de Ecuaciones Estructurales''}. XXXVI Chilean Congress of Engineering Education. Organizer: \href{https://www.sochedi.cl}{Chilean Society of Engineering Education}}
 \cvitem{Aug 2024}{\textit{``Workshop: Investigación Reproducible con R''}. Open Science Webinar USM. Organizer: \href{https://www.usm.cl/}{Universidad Técnica Federico Santa María}}
-\cvitem{Jul 2024}{\textit{``Experiencias en Ciencia Abierta''}.  Ciencia Abierta USM. Organizer: \href{https://www.usm.cl/}{Universidad Técnica Federico Santa María}}
+\cvitem{Jul 2024}{\textit{``Experiencias en Ciencia Abierta''}.  Open Science USM. Organizer: \href{https://www.usm.cl/}{Universidad Técnica Federico Santa María}}
 \cvitem{Jul 2024}{\textit{``Archimedean-like spatial copulas and their applications''}. Colloquium on Statistics and Data Science. Organizer: \href{https://www.uc.cl/}{Pontificia Universidad Católica de Chile}}
 \cvitem{Nov 2023}{\textit{``Herramientas y estrategias para una investigación reproducible''}. 3rd Open Science Webinar USM. Organizer: \href{https://www.usm.cl/}{Universidad Técnica Federico Santa María}}
 \cvitem{Oct 2023}{\textit{``Retroalimentación basada en IA para estudiantes de Ingeniería''}. XXXV Chilean Congress of Engineering Education. Organizer: \href{https://www.sochedi.cl}{Chilean Society of Engineering Education}}
