--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -12,6 +12,7 @@
 \usepackage{bold-extra}
 \usepackage{xcolor}
 \usepackage{lastpage}
+\usepackage{enumitem}
 \usepackage{fontawesome5}
 
 \renewcommand{\familydefault}{\rmdefault}         % to set the default font; use '\sfdefault' for the default sans serif font, '\rmdefault' for the default roman one, or any tex font name
@@ -79,9 +80,8 @@
 \fancyhead[R]{\thepage\  of \pageref{LastPage}}
 \begin{document}
 \thispagestyle{empty}
-
 {\bfseries \LARGE Eloy Alvarado Narváez}\\
-\href{http://industrias.usm.cl}{Departmento de Industrias\\ Universidad Técnica Federico Santa María} \\ Santiago, Chile.\\
+\href{http://industrias.usm.cl}{Departamento de Industrias\\ Universidad Técnica Federico Santa María} \\ Santiago, Chile.\\
 Office: A-293\\
 \href{mailto:eloy.alvarado@usm.cl}{\faIcon[regular]{envelope}}
 \href{https://github.com/ealvnrz}{\faIcon{github}}
@@ -100,7 +100,7 @@ Office: A-293\\
 \cvitemwithcomment{2016 -- 2017}{Statistical Analyst, \href{http://www.equifax.com}{Equifax Inc.}}{Santiago, Chile. / Atlanta, US.}
 
 \section{Education}
-\cvitemwithcomment{2018 -- 2022}{Ph.D. in Statistics, \href{https://www.uv.cl/}{Instituto de Estadística, Universidad de Valparaíso } }{Valparaíso, Chile.}
+\cvitemwithcomment{2018 -- 2022}{Ph.D. in Statistics, \href{https://www.uv.cl/}{Instituto de Estadística, Universidad de Valparaíso }}{Valparaíso, Chile.}
 \cvitem{}{Advisors: Moreno Bevilacqua and Christian Caamaño}
 
 \cvitemwithcomment{2013 -- 2015}{Bachelor in Statistics / Statistician, \href{http://www.pucv.cl}{Pontificia Universidad Católica de Valparaíso}}{Valparaíso, Chile.}
@@ -134,56 +134,50 @@ random field approach for mining haul roads}. Joint work with David Godoy and To
 
 \section{Grants and Projects}
 
+\cvitem{2025 -- 2027}{Spatial extension of the Gumbel copula: applications to some non-Gaussian random fields, ANID. No. 11250479.}
 \cvitem{2023 -- 2024}{Modeling and estimating massive point referenced spatial data, MATH-AMSUD AMSUD220041. Research Associate.}
-\cvitem{2018 -- 2022}{National Doctoral Degree, ANID. No. 2018-21180953}
+\cvitem{2018 -- 2022}{National Doctoral Degree, ANID. No. 2018-21180953.}
 \cvitem{2020 -- 2020}{Semi-presential technological support platform for urgent and priority dental care for the elderly in the context
-of the COVID-19 pandemic in the Chilean population, ANID, Reference No. COVID0766, Chile. Collaborator}
+of the COVID-19 pandemic in the Chilean population, ANID, Reference No. COVID0766, Chile. Collaborator.}
+
+
 
 \section{Teaching}
 
 % USM
 \cvitem{}{\href{https://www.usm.cl/}{\textbf{\textsc{Universidad Técnica Federico Santa María}}}}
-\cvitem{2024/01-02}{ICN 292:  Management Information Systems}
-\cvitem{2024/01}{PII 402: Stochastic Processes (Postgraduate)}
-\cvitem{2023/02}{PII 402: Stochastic Processes (Postgraduate)}
-\cvitem{2023/01}{ICN 292:  Management Information Systems}
-\cvitem{2023/01}{IND 163C: Business Analytics}
-\cvitem{2022/02}{IND 163C: Business Analytics}
+\cvitem{\texttt{ICN292}}{Management Information Systems. \hfill \textit{Taught in 2023/01, 2024/01--02}}
+\cvitem{\texttt{PII402}}{Stochastic Processes (Postgraduate).\hfill \textit{Taught in 2023/02, 2024/01}}
+\cvitem{\texttt{IND163C}}{Business Analytics. \hfill \textit{Taught in 2022/02, 2023/01}}
 
 % UNAB
 \cvitem{}{\href{https://www.unab.cl/}{\textbf{\textsc{Universidad Andrés Bello}}}}
-\cvitem{2024/01}{CIND 217: Inteligencia de Negocios}
-\cvitem{2023/02}{IICG P01: Inteligencia de Negocios}
+\cvitem{\texttt{ATDFI102}}{Introduction to programming. \hfill \textit{Taught in 2024/02}}
+\cvitem{\texttt{CIND217}}{Business intelligence. \hfill \textit{Taught in 2024/01}}
+\cvitem{\texttt{IICGP01}}{Business intelligence. \hfill \textit{Taught in 2023/02}}
 
-%UV
+
+% UV
 \cvitem{}{\href{https://www.uv.cl/}{\textbf{\textsc{Universidad de Valparaíso}}}}
-\cvitem{2022/02}{IEST 422: Statistical Quality Control}
-\cvitem{2022/02}{LFIS 325: Statistics for Physical Sciences}
-\cvitem{2022/01}{IECD 411: Machine Learning}
-\cvitem{2022/01}{IEST 414: Time Series}
-\cvitem{2022/01}{IECD 415: Multivariate Methods}
-\cvitem{2021/02}{IECD 325: Linear Models and Experimental Design}
-\cvitem{2021/02}{LFIS 325: Statistics for Physical Sciences}
-\cvitem{2021/02}{IEST 412: Sampling Theory II}
-\cvitem{2021/01}{IEST 322: Sampling Theory I}
-\cvitem{2021/01}{IEST 412: Sampling Theory II}
-\cvitem{2021/01}{IEC 311: Probability and Statistics}
-\cvitem{2020/02}{IEST 322: Sampling Theory I}
-\cvitem{2020/02}{LFIS 325: Statistics for Physical Sciences}
-\cvitem{2020/01}{IEST 412: Sampling Theory II}
-\cvitem{2020/01}{IEC 311: Probability and Statistics}
-\cvitem{2019/02}{IEST 322: Sampling Theory I}
-\cvitem{2019/02}{IEST 213: Statistical Methods}
-\cvitem{}{\href{http://www.pucv.cl}{\textbf{\textsc{Pontificia Universidad Católica de Valparaíso}}}}
-\cvitem{2017/02}{EST 205: Probability and Statistics}
-\cvitem{2017/01}{EST 205: Probability and Statistics}
+\cvitem{\texttt{IEST422}}{Statistical Quality Control. \hfill \textit{Taught in 2022/02}}
+\cvitem{\texttt{LFIS325}}{Statistics for Physical Sciences. \hfill \textit{Taught in 2022/02, 2021/02, 2020/02}}
+\cvitem{\texttt{IECD411}}{Machine Learning. \hfill \textit{Taught in 2022/01}}
+\cvitem{\texttt{IEST414}}{Time Series. \hfill \textit{Taught in 2022/01}}
+\cvitem{\texttt{IECD415}}{Multivariate Methods. \hfill \textit{Taught in 2022/01}}
+\cvitem{\texttt{IECD325}}{Linear Models and Experimental Design. \hfill \textit{Taught in 2021/02}}
+\cvitem{\texttt{IEST412}}{Sampling Theory II. \hfill \textit{Taught in 2021/02, 2021/01, 2020/01}}
+\cvitem{\texttt{IEST322}}{Sampling Theory I. \hfill \textit{Taught in 2021/01, 2020/02, 2019/02}}
+\cvitem{\texttt{IEC311}}{Probability and Statistics. \hfill \textit{Taught in 2021/01, 2020/01}}
+\cvitem{\texttt{IEST213}}{Statistical Methods. \hfill \textit{Taught in 2019/02}}
 
+% PUCV
+\cvitem{}{\href{http://www.pucv.cl}{\textbf{\textsc{Pontificia Universidad Católica de Valparaíso}}}}
+\cvitem{\texttt{EST205}}{Probability and Statistics. \hfill \textit{Taught in 2017/01, 2017/02}}
 
 \section{Advising}
+\cvitem{2024}{Cristóbal Retamal. Industrial Engineering. \href{https://www.industrias.usm.cl/}{Universidad Técnica Federico Santa María}. Advisor.}
 \cvitem{2024}{Nicolás Bravo. Industrial Engineering. \href{https://www.industrias.usm.cl/}{Universidad Técnica Federico Santa María}. Advisor.}
-
 \cvitem{2023}{Ricardo Menares. Statistics and Data Science Engineering. \href{https://www.uv.cl/}{Universidad de Valparaíso}. Co-advisor.}
-
 \cvitem{2022}{Cristóbal Collao. Statistical Engineering. \href{https://www.uv.cl/}{Universidad de Valparaíso}. Co-advisor.}
 
 
@@ -191,12 +185,12 @@ of the COVID-19 pandemic in the Chilean population, ANID, Reference No. COVID076
 
 \cvitem{Nov 2024}{\textit{``Weibull random fields through Clayton spatial copula An application to mining haul roads''}. III Statistical Engineering Conference. Organizer: \href{https://www.usach.cl}{Universidad de Santiago de Chile}}
 \cvitem{Oct 2024}{\textit{``Archimedean-like spatial copulas''}. XLVII National Conference on Statistics. Organizer: \href{https://www.soche.cl}{Chilean Statistical Society}}
-\cvitem{Oct 2024}{\textit{``Análisis de la intención de uso de TIC en Ingeniería Civil Industrial: Integrando UTAUT y Modelos de Ecuaciones Estructurales''}. XXXVI Chilean Congress of Engineering Education. Organizer: \href{https://www.sochedi.cl}{Chilean Society of Engineering Education}}
-\cvitem{Aug 2024}{\textit{``Workshop: Investigación Reproducible con R''}. Open Science Webinar USM. Organizer: \href{https://www.usm.cl/}{Universidad Técnica Federico Santa María}}
-\cvitem{Jul 2024}{\textit{``Experiencias en Ciencia Abierta''}.  Open Science USM. Organizer: \href{https://www.usm.cl/}{Universidad Técnica Federico Santa María}}
+\cvitem{Oct 2024}{\textit{``Analysis of the Intention to Use ICT in Industrial Engineering: Integrating UTAUT and Structural Equation Models''}. XXXVI Chilean Congress of Engineering Education. Organizer: \href{https://www.sochedi.cl}{Chilean Society of Engineering Education}}
+\cvitem{Aug 2024}{\textit{``Workshop: Reproducible Research with R''}. Open Science Webinar USM. Organizer: \href{https://www.usm.cl}{Universidad Técnica Federico Santa María}}
+\cvitem{Jul 2024}{\textit{``Experiences in Open Science''}. Open Science USM. Organizer: \href{https://www.usm.cl/}{Universidad Técnica Federico Santa María}}
 \cvitem{Jul 2024}{\textit{``Archimedean-like spatial copulas and their applications''}. Colloquium on Statistics and Data Science. Organizer: \href{https://www.uc.cl/}{Pontificia Universidad Católica de Chile}}
-\cvitem{Nov 2023}{\textit{``Herramientas y estrategias para una investigación reproducible''}. 3rd Open Science Webinar USM. Organizer: \href{https://www.usm.cl/}{Universidad Técnica Federico Santa María}}
-\cvitem{Oct 2023}{\textit{``Retroalimentación basada en IA para estudiantes de Ingeniería''}. XXXV Chilean Congress of Engineering Education. Organizer: \href{https://www.sochedi.cl}{Chilean Society of Engineering Education}}
+\cvitem{Nov 2023}{\textit{``Tools and Strategies for Reproducible Research''}. 3rd Open Science Webinar USM. Organizer: \href{https://www.usm.cl/}{Universidad Técnica Federico Santa María}}
+\cvitem{Oct 2023}{\textit{``AI-based Feedback for Engineering Students''}. XXXV Chilean Congress of Engineering Education. Organizer: \href{https://www.sochedi.cl}{Chilean Society of Engineering Education}}
 \cvitem{Dec 2022}{\textit{``A flexible clayton-like spatial copula with application to bounded support data''}. III Statistics Workshop: Graduate Contributions and Scientific initiation. Organizer: \href{https://www.soche.cl}{Chilean Statistical Society}}
 \cvitem{Oct 2015}{\textit{``Stochastics differential equations in mathematical finance: The Black-Scholes Model''}. XXI Valparaíso Statistical Week. \href{https://www.pucv.cl}{Pontificia Universidad Católica de Valparaíso}}
 
@@ -208,7 +202,7 @@ of the COVID-19 pandemic in the Chilean population, ANID, Reference No. COVID076
 \href{mailto:carlos.montenegro@ifop.cl}{\texttt{carlos.montenegro@ifop.cl}}}
 
 \vfill
-\textit{Updated: November 2024}
+\textit{Updated: February 2025}
 % Publications from a BibTeX file using the multibib package
 %\section{Publications}
 %\nocitebook{book1,book2}
