--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -122,15 +122,24 @@ Office: A-293\\
 \nocite{*}
 \bibliography{publications}                        % 'publications' is the name of a BibTeX file
 
-\section{Working papers}
+\section{Working Papers}
 
 \cvitem{1.}{\textit{Simulation-based road characterization using LiDAR intensity: a
-random field approach for mining haul roads}. Joint work with David Godoy and Tomás Chávez.} 
+random field approach for mining haul roads}. Joint work with David Godoy and Tomás Chávez. \newline \textbf{Status:} Manuscript in Final Preparation.} 
 
-\cvitem{2.}{\textit{Ali-Mikhail-Haq spatial copula}. Joint work with Moreno Bevilacqua and Christian Caamaño-Carrillo.}
+\cvitem{2.}{\textit{Ali-Mikhail-Haq spatial copula}. Joint work with Moreno Bevilacqua and Christian Caamaño-Carrillo. \newline \textbf{Status:} Manuscript in Final Preparation.}
 
-\cvitem{3.}{\textit{Weibull random fields through Clayton spatial copula: An application to mining haul roads}. Joint work with Christian Caamaño-Carrillo and Luis Riquelme.}
-\cvitem{4.}{\textit{A CAPM Approach with Stable Error Distributions: Application to Brazilian Market Dynamics}. Joint work with María Elisa Farías and Kerlyns Martínez.}
+\cvitem{3.}{\textit{Weibull random fields through Clayton spatial copula: An application to mining haul roads}. Joint work with Christian Caamaño-Carrillo and Luis Riquelme. \newline \textbf{Status:} Manuscript in Final Preparation.}
+
+\cvitem{4.}{\textit{Drift parameter identification for the Ornstein-Uhlenbeck process driven by  Ornstein-Uhlenbeck with  small  General Gaussian  noise}. Joint work with Héctor Araya and Francisco Plaza-Vega. \newline \textbf{Status:} Manuscript in Final Preparation.}
+
+\cvitem{5.}{\textit{A CAPM Approach with Stable Error Distributions: Application to Brazilian Market Dynamics}. Joint work with María Elisa Farías and Kerlyns Martínez. \newline \textbf{Status:} Early Stage - Preliminary Results and Draft Development.}
+
+\cvitem{6.}{\textit{Gumbel Spatial Copula}. Joint work with Moreno Bevilacqua and Christian Caamaño-Carrillo. \newline \textbf{Status:} Early Stage - Developing Theoretical Results.}
+
+
+
+
 
 \section{Grants and Projects}
 
@@ -146,8 +155,8 @@ of the COVID-19 pandemic in the Chilean population, ANID, Reference No. COVID076
 
 % USM
 \cvitem{}{\href{https://www.usm.cl/}{\textbf{\textsc{Universidad Técnica Federico Santa María}}}}
-\cvitem{\texttt{ICN292}}{Management Information Systems. \hfill \textit{Taught in 2023/01, 2024/01--02}}
-\cvitem{\texttt{PII402}}{Stochastic Processes (Postgraduate).\hfill \textit{Taught in 2023/02, 2024/01}}
+\cvitem{\texttt{ICN292}}{Management Information Systems. \hfill \textit{Taught in 2023/01, 2024/01--02, 2025/01}}
+\cvitem{\texttt{PII402}}{Stochastic Processes (Postgraduate).\hfill \textit{Taught in 2023/02, 2024/01, 2025/01}}
 \cvitem{\texttt{IND163C}}{Business Analytics. \hfill \textit{Taught in 2022/02, 2023/01}}
 
 % UNAB
@@ -165,14 +174,14 @@ of the COVID-19 pandemic in the Chilean population, ANID, Reference No. COVID076
 \cvitem{\texttt{IEST414}}{Time Series. \hfill \textit{Taught in 2022/01}}
 \cvitem{\texttt{IECD415}}{Multivariate Methods. \hfill \textit{Taught in 2022/01}}
 \cvitem{\texttt{IECD325}}{Linear Models and Experimental Design. \hfill \textit{Taught in 2021/02}}
-\cvitem{\texttt{IEST412}}{Sampling Theory II. \hfill \textit{Taught in 2021/02, 2021/01, 2020/01}}
+\cvitem{\texttt{IEST412}}{Sampling Theory II. \hfill \textit{Taught in 2021/01-02, 2020/01}}
 \cvitem{\texttt{IEST322}}{Sampling Theory I. \hfill \textit{Taught in 2021/01, 2020/02, 2019/02}}
 \cvitem{\texttt{IEC311}}{Probability and Statistics. \hfill \textit{Taught in 2021/01, 2020/01}}
 \cvitem{\texttt{IEST213}}{Statistical Methods. \hfill \textit{Taught in 2019/02}}
 
 % PUCV
 \cvitem{}{\href{http://www.pucv.cl}{\textbf{\textsc{Pontificia Universidad Católica de Valparaíso}}}}
-\cvitem{\texttt{EST205}}{Probability and Statistics. \hfill \textit{Taught in 2017/01, 2017/02}}
+\cvitem{\texttt{EST205}}{Probability and Statistics. \hfill \textit{Taught in 2017/01-02}}
 
 \section{Advising}
 \cvitem{2024}{Cristóbal Retamal. Industrial Engineering. \href{https://www.industrias.usm.cl/}{Universidad Técnica Federico Santa María}. Advisor.}
@@ -202,7 +211,8 @@ of the COVID-19 pandemic in the Chilean population, ANID, Reference No. COVID076
 \href{mailto:carlos.montenegro@ifop.cl}{\texttt{carlos.montenegro@ifop.cl}}}
 
 \vfill
-\textit{Updated: February 2025}
+\textit{Updated: April 2025}
+
 % Publications from a BibTeX file using the multibib package
 %\section{Publications}
 %\nocitebook{book1,book2}
