--- a/cv_en/publications.bib
+++ b/cv_en/publications.bib
@@ -1,15 +1,15 @@
 @Article{FAS2024,
   author  = {Farías, María Elisa and Alvarado, Eloy and Scavia, Javier},
-  journal = {Applied Economics (Under Review)},
-  title   = {Is Divergence the Cause? Contagion in Times of Financial Distress},
-  year    = {2024},
+  journal = {Open Economics Review (Under Review)},
+  title   = {Contagion, Financial Distress and DIvergent Beliefs},
+  year    = {2025},
 }
 
-@Article{Alvarado_canadian,
+@Article{Alvarado_LAJAR,
   author  = {Alvarado, Eloy and Plaza-Vega, Francisco and Montenegro, Carlos and Saavedra, Oscar},
-  journal = {Latin American Journal of Aquatic Research (Under Review)},
+  journal = {Latin American Journal of Aquatic Research (Accepted)},
   title   = {Deep learning-based classification of species in central-southern fisheries in Chile},
-  year    = {2024},
+  year    = {2025},
 }
 
 @article{BEVILACQUA2024105277,
