--- a/cv_en/publications.bib
+++ b/cv_en/publications.bib
@@ -21,7 +21,6 @@ year = {2024},
 note = {Copula Modeling from Abe Sklar to the present day},
 issn = {0047-259X},
 doi = {https://doi.org/10.1016/j.jmva.2023.105277},
-url = {https://www.sciencedirect.com/science/article/pii/S0047259X23001239},
 author = {Moreno Bevilacqua and Eloy Alvarado and Christian Caamaño-Carrillo},
 keywords = {Archimedean Copula, Beta random fields, Composite likelihood, Reflection Asymmetry},
 abstract = {The Gaussian copula is a powerful tool that has been widely used to model spatial and/or temporal correlated data with arbitrary marginal distributions. However, this kind of model can potentially be too restrictive since it expresses a reflection symmetric dependence. In this paper, we propose a new spatial copula model that makes it possible to obtain random fields with arbitrary marginal distributions with a type of dependence that can be reflection symmetric or not. Particularly, we propose a new random field with uniform marginal distributions that can be viewed as a spatial generalization of the classical Clayton copula model. It is obtained through a power transformation of a specific instance of a beta random field which in turn is obtained using a transformation of two independent Gamma random fields. For the proposed random field, we study the second-order properties and we provide analytic expressions for the bivariate distribution and its correlation. Finally, in the reflection symmetric case, we study the associated geometrical properties. As an application of the proposed model we focus on spatial modeling of data with bounded support. Specifically, we focus on spatial regression models with marginal distribution of the beta type. In a simulation study, we investigate the use of the weighted pairwise composite likelihood method for the estimation of this model. Finally, the effectiveness of our methodology is illustrated by analyzing point-referenced vegetation index data using the Gaussian copula as benchmark. Our developments have been implemented in an open-source package for the R statistical environment.}
@@ -44,7 +43,6 @@ abstract = {The Gaussian copula is a powerful tool that has been widely used to 
   keywords  = {tooth loss, caries experience, edentulism, elderly},
   language  = {en},
   publisher = {Multidisciplinary Digital Publishing Institute},
-  url       = {https://www.mdpi.com/1660-4601/20/4/3001},
   urldate   = {2023-02-25},
 }
 
@@ -55,6 +53,7 @@ abstract = {The Gaussian copula is a powerful tool that has been widely used to 
   year      = {2022},
   volume    = {2022},
   publisher = {Hindawi},
+  doi       = {10.1155/2022/6889285}
 }
 
 @Article{Beltran2022a,
@@ -65,6 +64,7 @@ abstract = {The Gaussian copula is a powerful tool that has been widely used to 
   number    = {1},
   pages     = {1--8},
   publisher = {Universidad de Concepci{\'o}n},
+  doi       = {10.17126/joralres.2022.023}
 }
 
  
@@ -74,6 +74,7 @@ abstract = {The Gaussian copula is a powerful tool that has been widely used to 
   title   = {Teledentistry protocol for the elderly in the context of the COVID-19 pandemic through a web platform/mobile app: approach from the general dentist.},
   year    = {2022},
   pages   = {1--8},
+  doi     = {10.17126/joralres.2022.026}
 }
 
 
@@ -84,18 +85,7 @@ abstract = {The Gaussian copula is a powerful tool that has been widely used to 
   year      = {2022},
   pages     = {1--35},
   publisher = {Taylor \& Francis},
+  doi       = {10.1080/07362994.2022.2033126}
 }
 
 
-@Comment{jabref-meta: databaseType:bibtex;}
-
-@Comment{jabref-meta: saveActions:disabled;
-all-text-fields[identity]
-date[normalize_date]
-month[normalize_month]
-pages[normalize_page_numbers]
-;}
-
-@Comment{jabref-meta: saveOrderConfig:original;citationkey;false;author;false;year;true;title;false;}
-
-%% end of file `publications.bib'.
