--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -183,15 +183,13 @@ random field approach for mining haul roads}. Joint work with David Godoy and To
 
 \cvitem{3.}{\textit{Weibull random fields through Clayton spatial copula: An application to mining haul roads}. Joint work with Christian Caamaño-Carrillo and Luis Riquelme. \newline \textbf{Status:} Manuscript in Final Preparation.}
 
-\cvitem{4.}{\textit{Drift parameter identification for the Ornstein-Uhlenbeck process driven by  Ornstein-Uhlenbeck with  small  General Gaussian  noise}. Joint work with Héctor Araya and Francisco Plaza-Vega. \newline \textbf{Status:} Manuscript in Final Preparation.}
+\cvitem{4.}{\textit{Non-Standard Profit Efficiency in Banking: A copula approach}. Joint work with Vivian Cruz and Fernando Díaz. \newline \textbf{Status:} Manuscript Draft Completed - Final Estimation in Progress.}
 
-\cvitem{5.}{\textit{A CAPM Approach with Stable Error Distributions: Application to Brazilian Market Dynamics}. Joint work with María Elisa Farías and Kerlyns Martínez. \newline \textbf{Status:} Early Stage - Preliminary Results and Draft Development.}
+\cvitem{5.}{\textit{Drift parameter identification for the Ornstein-Uhlenbeck process driven by  Ornstein-Uhlenbeck with  small  General Gaussian  noise}. Joint work with Héctor Araya and Francisco Plaza-Vega. \newline \textbf{Status:} Manuscript in Final Preparation.}
 
-\cvitem{6.}{\textit{Gumbel Spatial Copula}. Joint work with Moreno Bevilacqua and Christian Caamaño-Carrillo. \newline \textbf{Status:} Early Stage - Developing Theoretical Results.}
+\cvitem{6.}{\textit{A CAPM Approach with Stable Error Distributions: Application to Brazilian Market Dynamics}. Joint work with María Elisa Farías and Kerlyns Martínez. \newline \textbf{Status:} Early Stage - Preliminary Results and Draft Development.}
 
-
-
-
+\cvitem{7.}{\textit{Gumbel Spatial Copula}. Joint work with Moreno Bevilacqua and Christian Caamaño-Carrillo. \newline \textbf{Status:} Early Stage - Developing Theoretical Results.}
 
 \section{Grants and Projects}
 
@@ -235,6 +233,14 @@ of the COVID-19 pandemic in the Chilean population, ANID, Reference No. COVID076
 \cvitem{}{\href{http://www.pucv.cl}{\textbf{\textsc{Pontificia Universidad Católica de Valparaíso}}}}
 \cvitem{\texttt{EST205}}{Probability and Statistics. \hfill \textit{Taught in 2017/01-02}}
 
+\section{Academic Service}
+
+\cvitem{2024 -- \hfill}{Internship Coordinator, Department of Industries, Campus Vitacura, \href{https://www.usm.cl}{Universidad Técnica Federico Santa María}.}
+
+\cvitem{2024 -- \hfill}{Member of the academic committee for the development of a new undergraduate program: Bachelor's Degree in Data Science, \href{https://www.usm.cl}{Universidad Técnica Federico Santa María}.}
+
+
+
 \section{Advising}
 \cvitem{2024}{Cristóbal Retamal. Industrial Engineering. \href{https://www.industrias.usm.cl/}{Universidad Técnica Federico Santa María}. Advisor.}
 \cvitem{2024}{Nicolás Bravo. Industrial Engineering. \href{https://www.industrias.usm.cl/}{Universidad Técnica Federico Santa María}. Advisor.}
@@ -259,6 +265,8 @@ of the COVID-19 pandemic in the Chilean population, ANID, Reference No. COVID076
 \section{References}
 \cvlistitem{Moreno Bevilacqua, Associate Professor at \href{https:/www.uai.cl}{Universidad Adolfo Ibañez}.  \href{mailto:moreno.bevilacqua@uai.cl}{\texttt{moreno.bevilacqua@uai.cl}}}
 \cvlistitem{Christian Caamaño, Associate professor at \href{https://www.ubb.cl}{Universidad del Bío-Bío}. \href{mailto:chcaaman@ubiobio.cl}{\texttt{chcaaman@ubiobio.cl}}}
+\cvlistitem{Oscar Saavedra, Associate Professor at \href{https://www.usm.cl/}{Universidad Técnica Federico Santa María}.
+\href{mailto:oscar.saavedra@usm.cl}{\texttt{oscar.saavedra@usm.cl}}}
 \cvlistitem{Carlos Montenegro, Head of Fisheries Research at \href{https://www.ifop.cl}{IFOP}.
 \href{mailto:carlos.montenegro@ifop.cl}{\texttt{carlos.montenegro@ifop.cl}}}
 
