--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -235,11 +235,11 @@ of the COVID-19 pandemic in the Chilean population, ANID, Reference No. COVID076
 
 \section{Academic Service}
 
+\cvitem{2024 -- 2024}{Scientific Committee Member, \emph{Jornadas Chilenas de Estadística 2024}, organised by the \href{https://www.soche.cl}{Chilean Statistical Society}.}
+
 \cvitem{2024 -- \hfill}{Internship Coordinator, Department of Industries, Campus Vitacura, \href{https://www.usm.cl}{Universidad Técnica Federico Santa María}.}
 
 \cvitem{2024 -- \hfill}{Member of the academic committee for the development of a new undergraduate program: Bachelor's Degree in Data Science, \href{https://www.usm.cl}{Universidad Técnica Federico Santa María}.}
-
-
 
 \section{Advising}
 \cvitem{2024}{Cristóbal Retamal. Industrial Engineering. \href{https://www.industrias.usm.cl/}{Universidad Técnica Federico Santa María}. Advisor.}
