--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -211,8 +211,8 @@ of the COVID-19 pandemic in the Chilean population, ANID, Reference No. COVID076
 
 % UNAB
 \cvitem{}{\href{https://www.unab.cl/}{\textbf{\textsc{Universidad Andrés Bello}}}}
-\cvitem{\texttt{ATDFI102}}{Introduction to programming. \hfill \textit{Taught in 2024/02}}
-\cvitem{\texttt{CIND217}}{Business intelligence. \hfill \textit{Taught in 2024/01}}
+\cvitem{\texttt{ATDFI102}}{Introduction to programming. \hfill \textit{Taught in 2024/01,2025/01}}
+\cvitem{\texttt{CIND217}}{Business intelligence. \hfill \textit{Taught in 2024/01, 2025/01}}
 \cvitem{\texttt{IICGP01}}{Business intelligence. \hfill \textit{Taught in 2023/02}}
 
 
@@ -250,6 +250,7 @@ of the COVID-19 pandemic in the Chilean population, ANID, Reference No. COVID076
 
 \section{Scientific Events}
 
+\cvitem{Nov 2024}{\textit{``Weibull random fields through Clayton spatial copula An application to mining haul roads''}. III Conference on Geostatistics and Spatio-Temporal Statistics: Theory and Applications. Organizer:\href{https://www.usm.cl}{Universidad Técnica Federico Santa María}}
 \cvitem{Nov 2024}{\textit{``Weibull random fields through Clayton spatial copula An application to mining haul roads''}. III Statistical Engineering Conference. Organizer: \href{https://www.usach.cl}{Universidad de Santiago de Chile}}
 \cvitem{Oct 2024}{\textit{``Archimedean-like spatial copulas''}. XLVII National Conference on Statistics. Organizer: \href{https://www.soche.cl}{Chilean Statistical Society}}
 \cvitem{Oct 2024}{\textit{``Analysis of the Intention to Use ICT in Industrial Engineering: Integrating UTAUT and Structural Equation Models''}. XXXVI Chilean Congress of Engineering Education. Organizer: \href{https://www.sochedi.cl}{Chilean Society of Engineering Education}}
